css/cambridge.css
/* ... */
.index-banner-textbox {
  position: absolute;
  /*right: 15%;*/
  /*bottom: 20px;*/
  /*left: 15%;*/
  /*width: 100%;*/
  z-index: 10;
  /*padding-top: 20px;*/
  padding-bottom: 20px;
  color: #000;
  text-align: center;
  background: rgba(255,255,255,0.7);
  font-family: 'bignoodletitlingregular';
  font-size: 50pt;
  /*text-shadow: 0 1px 2px rgba(0, 0, 0, .6);*/
}
@media screen and (min-width: 1081px) and (max-width: 1350px){
  .ibt-img4 .ibt-text {
    font-size: 30pt;
  }
}
@media screen and (min-width: 775px) and (max-width: 1080px) {
  .index-banner-textbox {
    font-size: 30pt;
  }
}
@media screen and (min-width: 775px) {
  /* - - - for full and large width screens - - - */
  .index-banner-textbox {
    /*right: 20%;*/
    /*left: 20%;*/
    /*padding-bottom: 30px;*/
  }
  .ibt-img1 {
    padding-top: 40px;
    width: 100%;
    top: 35%;
  }
  .ibt-img1 .ibt-underline {
    width: 400px;
  }
  .ibt-img1 .ibt-text {
    line-height: 0.8em;
  }
  .ibt-img2 {
    padding-top: 40px;
    height: 100%;
    width: 375px;
    top: 10%;
    left: 10%;
  }
  .ibt-img2 .ibt-underline {
    width: 175px;
  }
  .ibt-img4 {
    padding: 30px 30px 0px 30px;
    height: 100%;
    width: 375px;
    top: 10%;
    right: 10%;
  }
  .ibt-img4 .ibt-text {
    line-height: 1.25em;
  }
  .ibt-img4 .ibt-underline {
    width: 175px;
  }
  .ibt-img5 {
    padding: 40px 20px 40px 20px;
    width: 550px;
    top: 30%;
    right: 0;
  }
  .ibt-img5 .ibt-text {
    line-height: 1.25em;
  }
  .ibt-img5 .ibt-underline {
    width: 175px;
  }
}
@media screen and (max-width: 774px) {
  /* - - - for small width screens - - - */
  .ibt-text {
    font-size: 20pt;
  }
  .ibt-img1, .ibt-img2, .ibt-img4, .ibt-img5 {
    padding-top: 25px;
    width: 100%;
    top: 0%;
  }
  .ibt-underline {
    width: 200px;
  }
  .ibt-text {
    line-height: 0.8em;
  }
}

.ibt-underline {
  margin: 0 auto;
  border-bottom: 5px solid #003DA5;
}

/* - - - text box for index img2 - - - */
/*.ibt-img2 {
  padding-top: 40px;
  width: 500px;
  height: 100%;
}
.ibt-img2 .ibt-underline {
  margin: 0 auto;
  width: 100px;
  border-bottom: 5px solid #003DA5;
}*/
/* -- Product pages -- */

.prod-tocatalogs {
  /*height: 20px;*/
  /*border: 1px solid #003DA5;*/
  margin: 0px 0px 10px 0px;
  padding-top: 20px;
  padding-bottom: 15px;
  width: 100%;
  background-color: #f2f2f2;
  text-align: center;
}
.prod-tocatalogs a {
  text-decoration: none;
  width: 100%;
  color: #000;
  /*background-color: #003DA5;*/
  padding: 10px;
  /*border-radius: 3px;*/
  /*margin-bottom: 5px;*/
  font-family: 'bignoodletitlingregular';
  font-size: 30pt;
  line-height: 1em;
}
.prod-tocatalogs-underline {
  margin: 0 auto;
  width: 200px;
  border-bottom: 4px solid #003DA5;
}

#product-main-page {
  width: 100%;
}
.custaccordion {
  font-family: 'Questrial', sans-serif;
  cursor: pointer;
  width: 100%;
  display: block;
  transition: 0.4s;
  text-align: left;
  padding-top: 5px;
  padding-bottom: 5px;
  /*padding-right: 5px;*/
}
.custpanel {
  /*width: 100%;*/
  margin-left: 10px;
  /*margin-right: 5px;*/

  /*overflow: hidden;*/
  display: none;
}
/*.inner-panel {
  width: 100%;
  margin-left: 10px;
  display: none;
  margin-right: 10px;
}*/
.no-sub {
  width: inherit;
  margin-left: 15px;
  /*margin-right: 10px;*/
}
.custaccordion a {
  display: inline-block;
  width: 100%;
}
.chev {
  width: 12px;
  height: 12px;
  margin-bottom: 3px;
  margin-right: 3px;
}
.custaccordion:hover {
  /*background-color: #ddd;*/
  /*cursor: pointer;*/
}
/*.accordion.active{
    background-color: #ddd;
}*/

/*button.accordion:after {
    content: '\002B';
    color: #777;
    font-weight: bold;
    float: left;
    margin-left: 5px;
}*/

/*button.accordion.active:after {
    content: "\2212";
}*/

/*div.panel {
    padding-left: 10px;
    background-color: white;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
}*/

#main {
  padding-bottom: 20px;
}

td.cat-bar {
  width: 27%;
  vertical-align: top;
  /*max-height: 100%;*/
}
td.cat-bar a {
  font-family: 'Questrial', sans-serif;
  text-decoration: inherit;
  color: inherit;
}
td.prod-display {
  width: 73%;
  vertical-align: top;
}

.group-container {
  padding-bottom: 20px;
  background-color: #F2F2F2;
}

.m-title {
  font-family: 'bignoodletitlingregular';
  background-color: #003DA5;
  /*background-color: #F2F2F2;*/
  color: white;
  font-size: 25px;
  letter-spacing: 2px;
  padding-left: 20px;
  padding-top: 10px;
}

.s1-box-background {
  background-color: #F2F2F2;
  width: 100%;
  height: 100%;
  /*display: flex;*/
  /*float: right;*/
  /*margin: auto;*/
}
.s1-box-background a {
  text-decoration: none;
}
/*.s1-box {
  width: 200px;
  height: 300px;
  display: inline;
  float: right;
}*/
.item-img img {
  width: 130px;
  height: 130px;
}
.s1-box-flex-container {
  padding: 0px 20px 0px 20px;
  margin: 0;
  list-style: none;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  /*-webkit-flex-flow: row wrap;*/
  flex-wrap: wrap;
  justify-content: space-around;
  height: 100%;
}
.s1-box {
  width: 150px;
  height: 200px;
  /*display: inline-block;*/
  /*margin: 0 auto;*/
  margin: 8px;
  /*vertical-align: top;*/
  /*background-color: black;*/
  /*margin-left: 20px;*/
  padding: 20px 0px 20px 0px;
  text-align: center;
  /*float: right;*/
}
.s1-cat {
  font-family: 'Questrial', sans-serif;
  text-align: center;
  padding-top: 10px;
  font-size: 12pt;
  line-height: 1em;
  color: #000;
  /*background-color: black;*/
}
.extra-box {
  display: none;
}
.show-hide {
  margin-left: 20px;
  /*padding-top: 20px;*/
}
.sh-chev {
  /*padding-bottom: 10px;*/
  padding-right: 5px;
}
.sh-chev img {
  margin-bottom: 7px;
}
.display-extra {
  /*margin-left: 20px;*/
  /*margin-bottom: 20px;*/
  cursor: pointer;
  font-family: 'bignoodletitlingregular';
  font-size: 20px;
  color: #003DA5;
  cursor: pointer;
}
/* ... */

